tests/invalid/undef_inst.m
:- module undef_inst.

:- pred x(int).
:- mode x(foo >> bar) is det.

x(1).
