tests/invalid/undef_inst.err_exp
undef_inst.m:  1: Warning: interface for module `undef_inst' does not export anything.
undef_inst.m:004: In mode declaration for predicate `undef_inst:x'/1:
undef_inst.m:004:   error: undefined inst `foo'/0.
undef_inst.m:004: In mode declaration for predicate `undef_inst:x'/1:
undef_inst.m:004:   error: undefined inst `bar'/0.
For more information, try recompiling with `-E'.
